<resources>
    <string name="app_name">FoodMart</string>
    <!--Strings used for Hamburger icon-->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="Rs">\u20B9</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="ok">OK</string>
    <string name="q_1_what_are_your_delivery_hours">Q.1 What are your delivery hours</string>
    <string name="our_delivery_hour_is_from_10_00_am_to_08_00_pm">Our delivery hour is from 10:00 AM to 08:00 PM.</string>
    <string name="q_2_how_much_time_it_takes_to_deliver_the_order">Q.2 How much time it takes to deliver the order?</string>
    <string name="generally_it_takes_between_45_minutes_to_1_hour_time_to_deliver_the_order_due_to_long_distance_or_heavy_traffic_delivery_might_take_few_extra_minutes">Generally it takes between 45 minutes to 1 hour time to deliver the order. Due to long distance or heavy traffic, delivery might take few extra minutes.</string>
    <string name="q_3_do_you_support_bulk_orders">Q.3 Do you support bulk orders?</string>
    <string name="in_order_to_provide_all_customers_with_a_great_selection_and_to_ensure_on_time_delivery_of_your_meal_we_request_you_to_order_bulk_quantity_at_least_24_hours_in_advance">In order to provide all customers with a great selection and to ensure on-time delivery of your meal, we request you to order bulk quantity at least 24 hours in advance.</string>
    <string name="q_4_i_want_an_invoice_for_my_order">Q.4 I want an invoice for my order?</string>
    <string name="invoice_copy_is_sent_via_email_and_text_message">Invoice Copy is sent via email and Text Message</string>
    <string name="q_5_i_want_an_invoice_for_my_order">Q.5 I want an invoice for my order?</string>
    <string name="q_6_i_want_an_invoice_for_my_order">Q.6 I want an invoice for my order?</string>
    <string name="ordering_from">ordering from:</string>
    <string name="place_order">place order</string>
    <string name="checked">Checked</string>
    <string name="can_t_find_any_restaurant_with_that_name" />
    <string name="no_orders_placed">no_orders_placed</string>
    <string name="your_previous_orders_are_listed_below">your previous orders are listed below:</string>
</resources>