<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FaqFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="20dp"
          android:text="@string/q_1_what_are_your_delivery_hours"
          android:textSize="20sp"
          android:textColor="#F44336"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="15dp"
          android:text="@string/our_delivery_hour_is_from_10_00_am_to_08_00_pm"
          android:textSize="18sp"
          android:textColor="@color/black"
          />
  </LinearLayout>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="10dp"
          android:background="#D7EFD3D3"
          />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/q_2_how_much_time_it_takes_to_deliver_the_order"
            android:textSize="20sp"
            android:textColor="#F44336"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/generally_it_takes_between_45_minutes_to_1_hour_time_to_deliver_the_order_due_to_long_distance_or_heavy_traffic_delivery_might_take_few_extra_minutes"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#D7EFD3D3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/q_3_do_you_support_bulk_orders"
            android:textSize="20sp"
            android:textColor="#F44336"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/in_order_to_provide_all_customers_with_a_great_selection_and_to_ensure_on_time_delivery_of_your_meal_we_request_you_to_order_bulk_quantity_at_least_24_hours_in_advance"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#D7EFD3D3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/q_4_i_want_an_invoice_for_my_order"
            android:textSize="20sp"
            android:textColor="#F44336"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/invoice_copy_is_sent_via_email_and_text_message"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#D7EFD3D3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/q_5_i_want_an_invoice_for_my_order"
            android:textSize="20sp"
            android:textColor="#F44336"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/invoice_copy_is_sent_via_email_and_text_message"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#D7EFD3D3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/q_6_i_want_an_invoice_for_my_order"
            android:textSize="20sp"
            android:textColor="#F44336"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/invoice_copy_is_sent_via_email_and_text_message"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#D7EFD3D3"
        />
</LinearLayout>
</ScrollView>