<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderConfirmActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/customPrimaryDark"
        android:id="@+id/orderSuccessfullyPlaced"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_check"
            android:layout_centerInParent="true"
            android:id="@+id/imageViewOrderPlaced"
            android:contentDescription="@string/checked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_order_has_been_successfully_placed"
            android:textColor="#3A373A"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageViewOrderPlaced"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOkay"
                android:text="@string/ok"
                android:textColor="#fff"
                android:layout_margin="2dp"
                android:background="@color/purple_200"
                android:textSize="20sp"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>